Revision history for Dist-Metadata

{{$NEXT}}

  [Enhancements]
  - Support zip archives (in addition to tar files).
    (Thanks to thaljef for reporting.)

0.915     2011-08-16T18:52:01Z

  - Remove warning for no packages found (thaljef).

0.914     2011-08-02T16:01:46Z

  - Use Path::Class::Dir's mkpath for simplicity/compatibility.
    Closes RT 69961.  Thanks to MELEZHIK for reporting.

0.913     2011-07-19T21:15:24Z

  - Pass paths to CPAN::DistnameInfo in Unix format.
    Thanks to jeroenl for figuring out that test failure on Win32.
    Closes RT 69585.

  - Remove unnecessary build file from release tarball

0.912     2011-07-14T23:38:40Z

  - Use CPAN::DistnameInfo to parse name/version from file name

0.911     2011-07-04T22:10:24Z

  - Fix test to use non-os specific paths in regexp

0.910     2011-07-03T00:06:00Z

  [Fixes]
  - Work around weird, possible perl bug (described at http://bit.ly/mhaQ4x)
    that made Struct->file_content return undef for IO-like objects

  [Prereqs]
  - use Path::Class instead of File::Spec
  - ensure File::Spec::Native is available

  [Documentation]
  - Clarify details of module's purpose in Pod Description

  [Testing]
  - Add dist format tests
  - Report version of JSON::PP (if any) installed to help debug
    troublesome smoke testing environments

0.904     2011-06-24T06:09:23Z

  - Fix path mismatch for "provides" when using Module::Metadata on Win32
  - Add more TODO ideas

0.903     2011-06-23T05:59:41Z

  - Load File::Spec (and subclasses) consistently

0.902     2011-06-23T05:51:42Z

  [Fixes]
  - Change determine_packages to always return paths in unix format
    (as required by CPAN::Meta::Spec)
  - Fix regexp path bugs on windows

  [Enhancements]
  - Include 'xt/' in the default no_index:directory list

  [Documentation]
  - Add items to pod TODO list

0.901     2011-06-22T01:22:07Z

  - Initial release