@@ -6,6 +6,10 @@ Revision history for Dist-Metadata
   - Support zip archives (in addition to tar files).
     (Thanks to thaljef for reporting.)
 
+  [API Change]
+  - Dist::extract_into() and Dist::physical_directory() now return just $dir
+    in scalar context (and continue to return ($dir, @files) in list context)
+
 0.915     2011-08-16T18:52:01Z
 
   - Remove warning for no packages found (thaljef).
